--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel": "^6.23.0",
     "bootstrap-grid": "^3.0.1",
     "gulp": "^3.9.1",
+    "jquery-zoom": "^1.7.21",
     "path": "^0.12.7",
     "sass": "^1.14.1",
     "vue": "^2.5.20",
